--- a/treeview.css
+++ b/treeview.css
@@ -41,10 +41,30 @@ grid frame:nth-child(even) {
   background-color: #fff;
   border-width: 1px 1px 0px 1px;
 }
+grid frame:last-child {
+  background-color: #fff;
+  border-width: 0px 1px 1px 1px;
+}
+/* Nested grid styles */
+frame:last-child grid frame:nth-child(-n+4) {
+  background-color: #888;
+  /* border-width: 1px 0px 0px 1px !important; */
+  /* margin: 10px 10px 10px 10px; /1* padding? *1/ */
+}
+/* frame:last-child grid frame:nth-child(1n-5) { */
+/*   background-color: #fff; */
+/*   border-width: 1px 1px 0px 1px; */
+/* } */
 frame border {
   border-style: solid;
   border-radius: 0;
   padding: 20px;
+}
+frame:last-child border {
+  padding: 0;
+}
+frame:last-child frame border {
+  padding: 10px 20px 10px 20px;
 }
 button {
   color: black;
